@@ -1,3 +1,8 @@
+1999-06-24  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* gtkhex.c (gtk_hex_size_allocate, recalc_displays): added
+	some sanity checks for widths and heights.
+
 1999-06-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* gtkhex.c: major rewrite of the gc handling code. added some
